<resources>
    <string name="app_name">Easy Calc</string>
    <string name="del">DEL</string>
    <string name="digit4">4</string>
    <string name="symbolStar">*</string>
    <string name="symbolPlus">+</string>
    <string name="symbolMinus">-</string>
    <string name="symbolDiv">/</string>
    <string name="digit3">3</string>
    <string name="digit2">2</string>
    <string name="digit1">1</string>
    <string name="digit0">0</string>
    <string name="digit9">9</string>
    <string name="digit8">8</string>
    <string name="digit6">6</string>
    <string name="digit5">5</string>
    <string name="digit7">7</string>
    <string name="symbolDot">.</string>
    <string name="symbolEqual">=</string>
</resources>